--- a/searcher_client/Cargo.toml
+++ b/searcher_client/Cargo.toml
@@ -9,10 +9,10 @@ futures-util = "0.3.28"
 jito-protos = { path = "../jito_protos" }
 log = "0.4"
 prost-types = "0.12"
-solana-client = "1.18.7"
-solana-metrics = "=1.18.7"
-solana-sdk = "=1.18.7"
-solana-transaction-status = "=1.18.7"
+solana-client = "1.18.26"
+solana-metrics = "1.18.26"
+solana-sdk = "1.18.26"
+solana-transaction-status = "1.18.26"
 thiserror = "1.0.40"
 tokio = "1"
 tonic = "0.10"
