--- a/jito_protos/Cargo.toml
+++ b/jito_protos/Cargo.toml
@@ -11,7 +11,7 @@ prost = "0.12"
 prost-types = "0.12"
 solana-perf = "1.18.26"
 solana-sdk = "1.18.26"
-tonic = "0.10"
+tonic = { version = "0.10", features = ["tls"] }
 
 [build-dependencies]
 tonic-build = "0.10"
